individual entity created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/relate
+spring.datasource.username=relate
+spring.datasource.password=relate
 
+spring.jpa.hibernate.ddl-auto=create-drop
